implemented location inspector using StanfordCoreNLP